# greenbutton_objects

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .xsdata.xml  CODESPACES.md  CODE_OF_CONDUCT.md  Makefile  NOTICE  README.md  README.multi-repo.md  TODO  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json  env_setup.sh  post_start.sh
.devcontainer/with_energy_app/: devcontainer.json  env_setup.sh  post_attach.sh  post_start.sh
.github/workflows/: pre-commit-ci.yml  python.yml
.run/: pytest.run.xml
src/greenbutton_objects/: enums.py  objects.py  parse.py  resources.py  util.py  utils.py
src/greenbutton_objects/atom/: __init__.py  entry_forest.py  href_forest.py
src/greenbutton_objects/data/atom/: __init__.py  atom.py  xml.py
src/greenbutton_objects/data/espi/: __init__.py  espi.py
src/greenbutton_objects/feed/: __init__.py  feed.py
src/greenbutton_objects/objects/: __init__.py  enums.py  objects.py
tests/: conftest.py  test_digested.py  test_parse.py
tests/data/abridged/: electric_containerized.xml  gas_containerized.xml
tests/data/electricity/: Coastal_Multi_Family_Daily_Jan_1_2011_to_Jan_1_2012_RetailCustomer_4.xml  Coastal_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_5.xml  Desert_Single_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_7.xml  Inland_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_8.xml  Inland_Single_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_9.xml  Mountain_Multi_family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_10.xml
tests/data/natural_gas/: ngma_natural_gas_billing_billing_data_Service_1_1_2021-05-26_to_2024-04-25.xml
tests/expected_results/abridged/: electric_containerized.txt  gas_containerized.txt  gas_direct.txt
tests/expected_results/electricity/: Coastal_Multi_Family_12hr_Jan_1_2011_to_Jan_1_2012_RetailCustomer_3.txt  Coastal_Multi_Family_Daily_Jan_1_2011_to_Jan_1_2012_RetailCustomer_4.txt  Coastal_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_5.txt  Desert_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_6.txt  Desert_Single_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_7.txt  Inland_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_8.txt  Inland_Single_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_9.txt  Mountain_Multi_family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_10.txt  TestGBDataHourlyNineDaysBinnedDaily.txt  TestGBDataOneYearDailyBinnedMonthly.txt
tests/expected_results/natural_gas/: ngma_gas_provider_2024-07-16.txt  ngma_natural_gas_billing_billing_data_Service_1_1_2021-05-26_to_2024-04-25.txt
tests/helpers/: feed_repr.py
tests/test_parse/: test_parse.py
tests/test_parse/data/electricity/: Coastal_Multi_Family_12hr_Jan_1_2011_to_Jan_1_2012_RetailCustomer_3.xml  Coastal_Multi_Family_Daily_Jan_1_2011_to_Jan_1_2012_RetailCustomer_4.xml  Coastal_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_5.xml  Desert_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_6.xml  Desert_Single_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_7.xml  Inland_Multi_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_8.xml  Inland_Single_Family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_9.xml  Mountain_Multi_family_Jan_1_2011_to_Jan_1_2012_RetailCustomer_10.xml  (+2 more)
(+14 files in other folders)
