[build-system]
requires = [
  "setuptools>=61",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "greenbutton_objects"
version = "2024.7.11"
description = "Parse Green Button XML files into Python objects."
readme = "README.md"
authors = [
  {name = "Pip! Gold", email = "pip@aperiodic.net"},
  {name = "Adam Finkle", email = "77808710+AdamFinkle@users.noreply.github.com"},
  {name = "Ethan Strominger", email = "ethanstrominger2@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "xsdata"
]
keywords = ["feed", "reader"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "bumpver==2023.1129",
  "mypy==1.11.0",
  "nox==2024.4.15",
  "pip-tools==7.4.1",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "pytest_sugar==1.0.0",
  "pytest-xdist==3.6.1",
  "xsdata[cli]==24.7",
  "ruff==0.5.5"
]

[project.urls]
"Homepage" = "https://github.com/codeforboston/greenbutton_objects"
"Source Code" = "https://github.com/codeforboston/greenbutton_objects"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.bumpver]
current_version = "2024.7.11"
version_pattern = "YYYY.MM.DD"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'current_version = "{version}"'
]
"README.md" = [
  "{version}",
  "{pep440_version}"
]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
strict = true
# TODO: Remove this when explicit-override is enabled by default in strict mode
# https://github.com/python/mypy/issues/17511
enable_error_code = ["explicit-override"]

[tool.ruff]
line-length = 110
target-version = "py38"
preview = true # https://docs.astral.sh/ruff/preview/

[tool.ruff.lint]
select = [
  # docstrings
  # "D", <-- TODO: There are no docstrings in this project
  # pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # pep8-naming
  # "N",   <-- TODO: This project not PEP8 Naming compliant yet
  # pyupgrade
  # "UP", <-- TODO: This project uses outdated string formating
  # flake8-bugbear
  # "B",  <-- TODO: There are potential bugs in this project
  # flake8-simplify
  "SIM",
  # isort
  "I"
]
ignore = [
  "UP006", # Allow non standard library generics in type hints
  "UP007", # Allow Union in type hints
  "SIM114", # Allow if with same arms
  "B028", # Allow default warning level
  "SIM117", # Allow nested with
  "UP015", # Allow redundant open parameters
  "UP028" # Allow yield in for loop
]

[tool.ruff.lint.extend-per-file-ignores] # https://docs.astral.sh/ruff/settings/#extend-per-file-ignores
# Ignore missing __init__.py files in tests.
"tests/*" = ["INP001", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
